--- a/SmartEcoA/ClientApp/src/i18n/messages.xlf
+++ b/SmartEcoA/ClientApp/src/i18n/messages.xlf
@@ -213,6 +213,15 @@
           <context context-type="linenumber">20</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="PasswordChanged" datatype="html">
+        <source>
+  Password changed!
+</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">app/users/changepasswordinfo.component.html</context>
+          <context context-type="linenumber">1</context>
+        </context-group>
+      </trans-unit>
       <trans-unit id="ChangePassword" datatype="html">
         <source>Change password</source>
         <context-group purpose="location">
